--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,15 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+def compileDependencies = rootProject.ext.dependencies
+def testDependencies = rootProject.ext.testDependencies
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "org.loop.example"
+        applicationId "br.com.lucasalbuquerque"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -33,44 +36,25 @@ kapt {
 }
 
 dependencies {
-    //automatically added dependencies when project was created
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile project(':repository-remote-retrofit')
 
-    //Kotlin dependencies including Anko
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'org.jetbrains.anko:anko-support-v4:0.8.2'
-    /**
-     * Anko's DSL dependencies
-     */
-//    compile 'org.jetbrains.anko:anko-sdk15:0.7.1' // sdk19, sdk21, sdk23 are also available
-//    compile 'org.jetbrains.anko:anko-recyclerview-v7:0.7.1'
-//    compile 'org.jetbrains.anko:anko-percent:0.7.1'
-//    compile 'org.jetbrains.anko:anko-gridlayout-v7:0.7.1'
-//    compile 'org.jetbrains.anko:anko-design:0.7.1'
-//    compile 'org.jetbrains.anko:anko-cardview-v7:0.7.1'
-//    compile 'org.jetbrains.anko:anko-appcompat-v7:0.7.1'
+    compile compileDependencies.kotlin_stdlib
+    compile compileDependencies.anko_support
 
-    //Dagger 2 dependencies
-    compile 'com.google.dagger:dagger:2.0.2'
-    kapt 'com.google.dagger:dagger-compiler:2.0.2'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-    //Android basic dependencies
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    //Networking dependencies
-    compile 'com.squareup.retrofit2:retrofit:2.0.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
-//    compile 'com.squareup.picasso:picasso:2.5.2'
-    //Rx dependencies
-    compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'io.reactivex:rxkotlin:0.40.1'
-    //Test dependencies
-    androidTestCompile 'commons-io:commons-io:2.4'
-    androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
+    compile compileDependencies.support_v7
+
+    compile compileDependencies.dagger2
+    kapt compileDependencies.dagger2_compiler
+    provided compileDependencies.jsr250
+
+    compile compileDependencies.retrofit
+    compile compileDependencies.retrofit_converter_gson
+    compile compileDependencies.retrofit_rx_java
+    compile compileDependencies.okhttp
+    compile compileDependencies.okhttp3_logging_interceptor
+
+    compile compileDependencies.rxkotlin
+    compile compileDependencies.rxandroid
 }
