--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply from: 'buildsystem/dependencies.gradle'
 
 buildscript {
-    ext.kotlin_version = '1.0.1-2'
+    ext.kotlin_version = '1.0.2'
 
     repositories {
         jcenter()
