--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -37,6 +37,7 @@ ext {
             anko_design                : "org.jetbrains.anko:anko-design:${anko_version}",
             anko_cardview              : "org.jetbrains.anko:anko-cardview-v7:${anko_version}",
             anko_appcompat             : "org.jetbrains.anko:anko-appcompat-v7:${anko_version}",
+            glide                      : "com.github.bumptech.glide:glide:3.7.0",
     ]
 
     testDependencies = [
