--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,9 +1,11 @@
 apply plugin: "kotlin"
 
+def compileDependencies = rootProject.ext.dependencies
+def testDependencies = rootProject.ext.testDependencies
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
-    compile 'io.reactivex:rxkotlin:0.40.1'
+    compile compileDependencies.kotlin_stdlib
+    compile compileDependencies.rxkotlin
 }
